RG-958: Fixed. Alerts: duplicate alerts should collapse into one with counter
Former-commit-id: 5daead2bd230a3108518cfcdff54ef8a36d481c9

--- a/components/badge/badge.scss
+++ b/components/badge/badge.scss
@@ -14,6 +14,10 @@
   font-size: $ring-font-size-smaller;
 
   vertical-align: middle;
+
+  &_gray {
+    background-color: #F8F8F8;
+  }
 }
 
 .ring-badge_valid {
